--- a/Houseprice.ipynb
+++ b/Houseprice.ipynb
@@ -2009,9 +2009,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56a9371b",
+   "metadata": {},
+   "source": [
+    "# Summarized Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38eebe79",
+   "metadata": {},
+   "source": [
+    "* pd.set_option('display.max_columns', None)\n",
+    "* pd.set_option('display.max_rows', None)\n",
+    "***\n",
+    "* df.info()\n",
+    "* df.isnull() and df.isnull().sum()\n",
+    "* df3.isnull().sum().sum()\n",
+    "***\n",
+    "* plt.figure(figsize=(25, 25))\n",
+    "* sns.heatmap(df.isnull())\n",
+    "***\n",
+    "* missing_percent = df.isnull().sum()/df.shape[0]*100\n",
+    "* delete_cols = missing_percent[missing_percent > 17].index\n",
+    "* df2_after_drop = df.drop(columns=delete_cols)\n",
+    "* df3 = df2_after_drop.dropna()\n",
+    "***\n",
+    "* df.select_dtypes(include=['int64', 'float64']).columns\n",
+    "* df3.select_dtypes(include=['object']).columns\n",
+    "*** \n",
+    "* df['MSZoning'].value_counts()\n",
+    "* df['MSZoning'].value_counts()/df.shape[0]*100\n",
+    "* without_percent = pd.concat([df['MSZoning'].value_counts(), df3['MSZoning'].value_counts()], axis=1, keys=['original', 'after_cleaning'] )\n",
+    "* without_percent['percent_clean'] = ((without_percent['original']-without_percent['after_cleaning'])/without_percent['original']*100)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff5f2e38",
+   "id": "72d7030e",
    "metadata": {},
    "outputs": [],
    "source": []
